fix: text-align and other fixes

--- a/src/styles/typography/heading_4.sass
+++ b/src/styles/typography/heading_4.sass
@@ -18,11 +18,11 @@
  */
 
 :root,
-.small
+.small,
 .downscaled
-    --cn-font-size-heading-4: 21px
-    --cn-letter-spacing-heading-4: 0.15px
-    --cn-line-height-heading-4: 24px
+  --cn-font-size-heading-4: 21px
+  --cn-letter-spacing-heading-4: 0.15px
+  --cn-line-height-heading-4: 24px
 
 .card, cn-card
   --cn-font-size-heading-4: 25px
